# self-sensored

./: .env.example  .gitignore  .monitor_state.json  .reviewed_commits  ARCHITECTURE.md  ARCHIVED_FILES_2025-09-17.md  BACKLOG.md  CLAUDE.md  CLOUDFLARE_CONFIGURATION.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CRITICAL_REVIEW_SUMMARY.md  Cargo.toml  DATA.md  DATABASE_SETUP.md  DECISION.md  DONE.md  Dockerfile  HEALTH_ENDPOINTS_IMPROVEMENTS.md  LICENSE  MIGRATION.md  MQTT_NETWORK_DEPLOYMENT.md  MQTT_SETUP_INSTRUCTIONS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  RECOVERY_COMPLETE.md  RECOVERY_STATUS.md  REPORT.md  REPOSITORY_ORGANIZATION_REPORT.md  REVIEW_CHECKLIST.md  STORY-EMERGENCY-001-COMPLETION.md  STORY-EMERGENCY-005-COMPLETE.md  STRATEGIC_DECISION_SUMMARY.md  TEST_RESULTS.md  TODO_CRITICAL_METRIC_METHODS.md  analyze_payloads.py  create_api_key.sql  create_mosquitto_dirs.sh  create_test_user.sql  (+46 more)
.claude/agents/: README.md  api-developer.md  architecture-validator.md  auth-security-specialist.md  batch-processing-optimizer.md  data-processor.md  database-architect.md  devops-deployment.md  devops-engineer.md  hipaa-compliance-officer.md  integration-coordinator.md  ios-integration-specialist.md  monitoring-observability.md  monitoring-specialist.md  performance-optimizer.md  redis-cache-specialist.md  test-orchestrator.md  testing-qa.md
.github/workflows/: ci.yml  deploy.yml  notifications.yml  performance.yml
app/: config.py  dependencies.py  logging_config.py  main.py
app/api/: models.py
app/db/: __init__.py  batch_operations.py  database.py  init.py  insert_logic.py  models.py  schema.sql  session.py
app/models/: health.py
benches/: api_throughput.rs  db_performance.rs
database/: README.md  add_extended_activity_columns.sql  add_missing_tables.sql  audio_exposure_table.sql  connection.js  db.js  schema.sql
database/init/: 01-init-extensions.sql
database/migrations/: 002_audio_exposure_table_separation.sql
database/scripts/: analyze_payloads.sql  json_analysis.sql
database/setup/: setup_production.sql
database/utils/: add_hashed_api_key.sql  create_test_api_key.sql  setup_api_key.sql
docs/: METRICS.md  PARTITION_MAINTENANCE.md  authentication-guide.md  client-sdk-examples.md  data_recovery_guide.md  health-export-api.postman_collection.json  ios_metric_mappings.md  openapi.yaml  rate-limiting-and-errors.md
docs/assessments/: security_assessment_payload_limits.md
docs/notes/: resolution_log.md  review_notes.md
k8s/: README.md  namespace.yaml
k8s/database/: postgresql-configmap.yaml  postgresql-secret.yaml  postgresql-services.yaml  postgresql-statefulset.yaml
k8s/redis/: redis-configmap.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-secret.yaml  redis-service.yaml
migrations/: 0002_health_metrics_schema.sql  0003_partitioning_setup.sql  0004_missing_tables_and_fixes.sql  0005_brin_indexes.sql  0005_brin_indexes_fixed.sql  0006_data_migration.sql  0007_sync_existing_state.sql  0008_duplicate_detection_constraints.sql  0009_background_processing.sql  000_setup_extensions.sql  0010_update_heart_rate_constraints.sql  0011_comprehensive_heart_rate_constraints.sql  0011_comprehensive_heart_rate_constraints_rollback.sql  0012_create_activity_metrics_v2.sql  0012_create_activity_metrics_v2_rollback.sql  0013_create_nutrition_metrics.sql  0013_create_nutrition_metrics_rollback.sql  0014_create_symptoms.sql  0014_create_symptoms_rollback.sql  0015_create_environmental_metrics.sql  0015_create_environmental_metrics_rollback.sql  0015_create_reproductive_health.sql  0015_create_reproductive_health_rollback.sql  0016_background_job_functions.sql  0017_create_mental_health_metrics.sql  0017_create_mental_health_metrics_rollback.sql  0018_create_mobility_metrics.sql  0018_create_mobility_metrics_rollback.sql  001_initial_schema.sql  002_create_data_mappings.sql  test_0011_constraints.sql
monitoring/: README.md  grafana-dashboard.json  ios-metric-monitoring-summary.md  prometheus-alerts.yml
monitoring/grafana-dashboards/: ios-metric-type-coverage.json
monitoring/prometheus/: ios-metric-alerts.yml
redis/config/: redis.conf
scripts/: migrate_activity_metrics.sql  monitor_compilation_and_test.sh  monitor_data_quality.sh  monitor_migration.sql  rotate-logs.sh  truncate-logs.sh
services/: users.js
services/sample_requests/: create_activity.json  create_user.json
sql_queries/: explore_activities.sql
src/: config.rs  lib.rs  main.rs
src/config/: batch_config.rs  log_queries.rs  logging.rs  mod.rs  validation_config.rs
src/db/: database.rs
src/handlers/: admin.rs  auth.rs  background.rs  background_coordinator.rs  body_measurements_handler.rs  data_loader.rs  environmental_handler.rs  export.rs  health.rs  hygiene_handler.rs  ingest.rs  ingest_async.rs  ingest_async_simple.rs  metabolic_handler.rs  mindfulness_handler.rs  mod.rs  (+11 more)
tests/: __init__.py  activity_metrics_extended_integration_test.rs  api_endpoints_full_coverage_test.rs  async_processing_test.rs  auth_caching_basic.rs  auth_full_test.rs  auth_full_test_summary.md  auth_handlers_comprehensive_test.rs  auth_service_basic_coverage_test.rs  auth_service_complete_coverage_test.rs  auth_service_comprehensive_test.rs  auth_service_coverage_test.rs  auth_service_db_test.rs  auth_service_test.rs  batch_processor_basic_coverage_test.rs  batch_processor_complete_coverage_test.rs  batch_processor_comprehensive_coverage_test.rs  batch_processor_comprehensive_test.rs  batch_processor_full_test.rs  batch_processor_standalone.rs  batch_processor_test.rs  batch_processor_working_test.rs  blood_glucose_batch_test.rs  body_measurements_integration_test.rs  cache_service_test.rs  cached_queries_test.rs  comprehensive_ingest_coverage_test.rs  config_test.rs  connection_optimization_test.rs  cors_security_test.rs  cycling_metrics_test.rs  data_recovery_test.rs  database_complete_coverage_test.rs  database_comprehensive_test.rs  database_test.rs  debug_auth_test.rs  debug_performance_test.rs  debug_sleep_test.rs  dual_write_rollback_test.rs  e2e_activity_test.rs  (+58 more)
(+116 files in other folders)
