[package]
name = "self-sensored"
version = "0.1.0"
edition = "2021"
authors = ["Health Export Team <team@example.com>"]
description = "Health Export REST API - Receives and stores health data from Auto Health Export iOS application"

[dependencies]
# Web Framework
actix-web = { version = "4.4", features = ["compress-gzip", "compress-brotli"] }
actix-cors = "0.7"
actix-files = "0.6"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration and Environment
dotenv = "0.15"
config = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"

# Redis for Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Security
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"], optional = true }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.22"
once_cell = "1.19"
regex = "1.0"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# MQTT support
rumqttc = { version = "0.24", features = ["websocket"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
testing = ["reqwest"]

[[bin]]
name = "self-sensored"
path = "src/main.rs"

