[package]
name = "self-sensored"
version = "0.1.0"
edition = "2021"
authors = ["Health Export Team <team@example.com>"]
description = "Health Export REST API - Receives and stores health data from Auto Health Export iOS application"

[dependencies]
# Web Framework
actix-web = { version = "4.4", features = ["compress-gzip", "compress-brotli"] }
actix-cors = "0.7"
actix-files = "0.6"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
futures = "0.3"

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork", "bigdecimal", "rust_decimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"

# Configuration and Environment
dotenvy = "0.15"
config = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"

# Redis for Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Security
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"], optional = true }

# Metrics and monitoring
prometheus = "0.14"
metrics = "0.22"
once_cell = "1.19"
regex = "1.0"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# MQTT support
rumqttc = { version = "0.24", features = ["websocket"] }
tempfile = "3.22.0"
simd-json = "0.16.0"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }
dotenv = "0.15"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
sysinfo = "0.30"

# Modern Testing Dependencies (2025)
actix-rt = "2.8"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rstest = "0.18"
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
futures = "0.3"

[features]
default = []
testing = ["reqwest"]

[[bin]]
name = "self-sensored"
path = "src/main.rs"

[[bin]]
name = "data_recovery"
path = "src/bin/data_recovery.rs"

[[bin]]
name = "processing_monitor"
path = "src/bin/processing_monitor.rs"

[[bin]]
name = "reprocess_failed"
path = "src/bin/reprocess_failed.rs"

# Test configuration for migration scripts

# Integration test configurations
[[test]]
name = "health_export_flow_test"
path = "tests/integration/health_export_flow_test.rs"

[[test]]
name = "load_test"
path = "tests/integration/load_test.rs"

[[test]]
name = "api_endpoints_test"
path = "tests/integration/api_endpoints_test.rs"

[[test]]
name = "database_full_test"
path = "tests/db/database_full_test.rs"

# Benchmark configurations
[[bench]]
name = "db_performance"
harness = false

[[bench]]
name = "api_throughput"
harness = false


