[tool.poetry]
name = "self-sensored"
version = "0.0.1"
description = "A REST API to receive Apple Health data from the Auto Export iOS app."
authors = ["C. Thomas Brittain <your-email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.5"
rich = "^14.0.0"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
uvicorn = "^0.34.2"
asyncpg = "^0.30.0"
poethepoet = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --log-level debug"